--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Pietrangelo Masala",
   "license": "LGPL-3.0",
   "dependencies": {
-    "newman": "^3.9.3"
+    "newman": "^3.9.3",
+    "postman-combine-collections": "^1.0.2"
   }
 }
